--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,29 @@
-img,mango.jpg{
-    width: 300px;
+img {
+    width: 100%;
+    height: 100%;
 }
-header {
+.container{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-    grid-template-rows: 20% 20% 20% 20% 20%;
+    grid-template-columns: repeat(20,1fr);
+    grid-template-rows: repeat(4,1fr);
+    column-gap: 20px;
+    width: 1000px;
+    height: 800px;
+    margin: 0 auto;
 }
-.err {
-    grid-column: 6fr;
-    grid-row: 4fr;
+#tray1{
+    grid-column: 1/10;
+    grid-row: 1;
 }
-.firstTray{
-    grid-column-start: 1;
-    grid-column-end: 3;
+#tray2{
+    grid-column: 10/20;
+    grid-row: 1; 
 }
-.secondTray{
-    grid-column-start: 3;
-    grid-column-end: 6;
+#mango1{
+    grid-column: 1/4;
+    grid-row: 2;
+}
+#mango2{
+    grid-column: 4/8;
+    grid-row: 2;
 }
