--- a/css/index.css
+++ b/css/index.css
@@ -20,10 +20,38 @@ img {
     grid-row: 1; 
 }
 #mango1{
-    grid-column: 1/4;
+    grid-column: 1/5;
     grid-row: 2;
 }
 #mango2{
-    grid-column: 4/8;
+    grid-column: 5/9;
     grid-row: 2;
+}
+#mango3{
+    grid-column: 9/16;
+    grid-row: 2/4;
+}
+#mango4{
+    grid-column: 16/21;
+    grid-row: 2;
+}
+#tray3{
+    grid-column: 1/9;
+    grid-row: 3; 
+}
+#mango5{
+    grid-column: 16/21;
+    grid-row: 3;
+}
+#mango6{
+    grid-column: 1/5;
+    grid-row: 4;
+}
+#mango7{
+    grid-column: 5/9;
+    grid-row: 4;
+}
+#tray4{
+    grid-column: 10/20;
+    grid-row: 4; 
 }
